--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,18 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: "v4.2.0"
+  rev: "v4.4.0"
   hooks:
   - id: check-yaml
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: "v0.942"
+  rev: "v1.1.1"
   hooks:
   - id: mypy
 - repo: https://github.com/pre-commit/mirrors-pylint
   rev: "v3.0.0a5"
   hooks:
   - id: pylint
+    args:
+    - --ignore=E0401,W1201,R0902,C0209,W0212,C0411
+    - --max-line-length=100
